--- a/client/index.html
+++ b/client/index.html
@@ -3,16 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Spotter</title>
-​
+
     <!-- <link rel="stylesheet" href="styles/styles.css"> -->
     <script src="lib/babel-browser/browser.js"></script>
     <script src="lib/react/react.js"></script>
     <script src="lib/react/react-dom.js"></script>
+    <script src="https://npmcdn.com/react-router/umd/ReactRouter.min.js"></script>
   </head>
   <body>
   <div id='app-container'>
     This app relies on JavaScript to run. If you're seeing this, it means you have JavaScript disabled. It's okay. We won't judge you. You just can't use our app!
     </div>
     <script type="text/javascript" src="/dist/src/app.js"></script>
+    <script type="text/javascript" src="/dist/src/views/SpotView.js"></script>
   </body>
 </html>
