--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,15 @@
   <div id='app-container'>
     This app relies on JavaScript to run. If you're seeing this, it means you have JavaScript disabled. It's okay. We won't judge you. You just can't use our app!
     </div>
-    <script type="text/javascript" src="/dist/src/app.js"></script>
     <script type="text/javascript" src="/dist/src/views/SpotView.js"></script>
+    <script type="text/javascript" src="/dist/src/views/MapView.js"></script>
+    <script type="text/javascript" src="/dist/src/views/FeedView.js"></script>
+    <script type="text/javascript" src="/dist/src/views/ProfileView.js"></script>
+    <script type="text/javascript" src="/dist/src/views/SearchView.js"></script>
+    <script type="text/javascript" src="/dist/src/views/CreateView.js"></script>
+    <script type="text/javascript" src="/dist/src/views/LoginView.js"></script>
+    <script type="text/javascript" src="/dist/src/views/SignupView.js"></script>
+    <script type="text/javascript" src="/dist/src/app.js"></script>
+
   </body>
 </html>
