--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
     <script src="lib/react/react.js"></script>
     <script src="lib/react/react-dom.js"></script>
     <script src="https://npmcdn.com/react-router/umd/ReactRouter.min.js"></script>
+    <script src="https://npmcdn.com/history/umd/History.min.js"></script>
   </head>
   <body>
   <div id='app-container'>
