(feat) render navbar

--- a/client/index.html
+++ b/client/index.html
@@ -12,9 +12,10 @@
     <script src="https://npmcdn.com/history/umd/History.min.js"></script>
   </head>
   <body>
-  <div id='app-container'>
-    This app relies on JavaScript to run. If you're seeing this, it means you have JavaScript disabled. It's okay. We won't judge you. You just can't use our app!
+    <div id='app-container'>
+      This app relies on JavaScript to run. If you're seeing this, it means you have JavaScript disabled. It's okay. We won't judge you. You just can't use our app!
     </div>
+    <div id='nav-container' />
     <script type="text/javascript" src="/dist/src/views/SpotView.js"></script>
     <script type="text/javascript" src="/dist/src/views/MapView.js"></script>
     <script type="text/javascript" src="/dist/src/views/FeedView.js"></script>
@@ -23,6 +24,7 @@
     <script type="text/javascript" src="/dist/src/views/CreateView.js"></script>
     <script type="text/javascript" src="/dist/src/views/LoginView.js"></script>
     <script type="text/javascript" src="/dist/src/views/SignupView.js"></script>
+    <script type="text/javascript" src="/dist/src/components/NavBar.js"></script>
     <script type="text/javascript" src="/dist/src/app.js"></script>
 
   </body>
