--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Spotter</title>
 
-    <!-- <link rel="stylesheet" href="styles/styles.css"> -->
+    <link rel="stylesheet" href="styles/styles.css">
     <script src="lib/babel-browser/browser.js"></script>
     <script src="lib/react/react.js"></script>
     <script src="lib/react/react-dom.js"></script>
