Refactors text in nav to icons

--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Spotter</title>
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
     <link rel="stylesheet" href="dist/styles/main.css">
     <script src="lib/babel-browser/browser.js"></script>
     <script src="lib/react/react.js"></script>
