(feat) implemented view and logic for posting spot data to server

--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8">
     <title>Spotter</title>
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-
     <link rel="stylesheet" href="dist/styles/main.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="lib/babel-browser/browser.js"></script>
     <script src="lib/react/react.js"></script>
     <script src="lib/react/react-dom.js"></script>
