--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <title>Spotter</title>
 
+    <!-- Material icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+
     <link rel="stylesheet" href="dist/styles/main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="lib/babel-browser/browser.js"></script>
