basic styling for sharecard

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,8 @@
 
     <!-- Material icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
 
 
     <link rel="stylesheet" href="dist/styles/main.css">
@@ -30,6 +32,7 @@
     <script type="text/javascript" src="/dist/src/views/LoginView.js"></script>
     <script type="text/javascript" src="/dist/src/views/SignupView.js"></script>
     <script type="text/javascript" src="/dist/src/components/NavBar.js"></script>
+    <script type="text/javascript" src="/dist/src/components/ShareCard.js"></script>
     <script type="text/javascript" src="/dist/src/app.js"></script>
 
   </body>
