--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,7 @@
     <script src="lib/react/react-dom.js"></script>
     <script src="https://npmcdn.com/react-router/umd/ReactRouter.min.js"></script>
     <script src="https://npmcdn.com/history/umd/History.min.js"></script>
+    <script src="http://maps.googleapis.com/maps/api/js"></script>
   </head>
   <body>
     <div id='app-container'>
@@ -34,6 +35,7 @@
     <script type="text/javascript" src="/dist/src/components/NavBar.js"></script>
     <script type="text/javascript" src="/dist/src/components/ShareCard.js"></script>
     <script type="text/javascript" src="/dist/src/app.js"></script>
-
+    
   </body>
 </html>
+
