--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
+    
+    <!-- Fixes scaling issues on iOS -->
+    <meta name = "viewport" content = "user-scalable=no, width=device-width">
+
     <title>Spotter</title>
 
     <!-- Material icons -->
@@ -35,7 +39,6 @@
     <script type="text/javascript" src="/dist/src/components/NavBar.js"></script>
     <script type="text/javascript" src="/dist/src/components/ShareCard.js"></script>
     <script type="text/javascript" src="/dist/src/app.js"></script>
-    
+
   </body>
 </html>
-
