--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
     <script src="lib/react/react-dom.js"></script>
     <script src="https://npmcdn.com/react-router/umd/ReactRouter.min.js"></script>
     <script src="https://npmcdn.com/history/umd/History.min.js"></script>
-    <script src="http://maps.googleapis.com/maps/api/js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
   </head>
   <body>
     <div id='app-container'>
