--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,7 @@
     <script src="https://npmcdn.com/react-router/umd/ReactRouter.min.js"></script>
     <script src="https://npmcdn.com/history/umd/History.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
+    <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
   </head>
   <body>
     <div id='app-container'>
