(feat) creates defaults for android add

--- a/client/index.html
+++ b/client/index.html
@@ -2,11 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    
+
     <!-- Fixes scaling issues on iOS -->
     <meta name = "viewport" content = "user-scalable=no, width=device-width">
+    <meta name="mobile-web-app-capable" content="yes">
+    <link href="/big-icon.png" rel="icon" />
 
-    <title>Spotter</title>
+    <title>irl</title>
     <!-- Material icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
