(feat) implemented logic for showing time until spot happens

--- a/client/index.html
+++ b/client/index.html
@@ -29,6 +29,7 @@
     <div id='nav-container' />
     <img src='gps.svg'/>
     <script type="text/javascript" src="/controllers/MapController.js"></script>
+    <script type="text/javascript" src="/controllers/TimeController.js"></script>
     <script type="text/javascript" src="/controllers/LocationController.js"></script>
     <script type="text/javascript" src="/dist/src/views/SpotView.js"></script>
     <script type="text/javascript" src="/dist/src/views/MapView.js"></script>
