Converting browser tests to CL tests.

--- a/tests/reactTests.html
+++ b/tests/reactTests.html
@@ -7,14 +7,13 @@
     <script src="../client/lib/react/react.js"></script>
     <script src="../client/lib/react/react-dom.js"></script>
     <script src="../client/lib/react/react-with-addons.js"></script>
-    <script src="https://npmcdn.com/react-router/umd/ReactRouter.min.js"></script>
-
-    <script src="https://npmcdn.com/history/umd/History.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
-    <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+    <script src="./ReactRouter.js"></script>
+    
+    <script src="./History.js"></script>
 
     <script src="../client/lib/mocha/mocha.js"></script>
     <script src="../client/lib/chai/chai.js"></script>
+
     <script>
       mocha.setup('bdd');
       var expect = chai.expect;
