(test) added phantomjs test suite; added dependecies in mock html

--- a/tests/reactTests.html
+++ b/tests/reactTests.html
@@ -27,6 +27,8 @@
 
   </head>
   <body>
+    <div id='app-container'></div>
+    <div id='nav-container'></div>
     <!-- Source files -->
     <script src="../client/controllers/MapController.js"></script>
     <script src="../client/controllers/LocationController.js"></script>
