(feat) adds login page with JWT support

--- a/client/index.html
+++ b/client/index.html
@@ -30,6 +30,7 @@
     <script type="text/javascript" src="/controllers/MapController.js"></script>
     <script type="text/javascript" src="/controllers/TimeController.js"></script>
     <script type="text/javascript" src="/controllers/LocationController.js"></script>
+    <script type="text/javascript" src="/controllers/AuthController.js"></script>
     <script type="text/javascript" src="/dist/src/views/SpotView.js"></script>
     <script type="text/javascript" src="/dist/src/views/MapView.js"></script>
     <script type="text/javascript" src="/dist/src/views/FeedView.js"></script>
