(test) added auth controller to reactTests.html

--- a/tests/reactTests.html
+++ b/tests/reactTests.html
@@ -32,6 +32,7 @@
     <!-- Source files -->
     <script src="../client/controllers/MapController.js"></script>
     <script src="../client/controllers/LocationController.js"></script>
+    <script src="../client/controllers/AuthController.js"></script>
     <script src="../client/dist/src/views/SpotView.js"></script>
     <script src="../client/dist/src/views/MapView.js"></script>
     <script src="../client/dist/src/views/FeedView.js"></script>
