--- a/client/index.html
+++ b/client/index.html
@@ -31,6 +31,7 @@
     <script type="text/javascript" src="/controllers/TimeController.js"></script>
     <script type="text/javascript" src="/controllers/LocationController.js"></script>
     <script type="text/javascript" src="/controllers/AuthController.js"></script>
+    <script type="text/javascript" src="/dist/src/components/Toast.js"></script>
     <script type="text/javascript" src="/dist/src/views/SpotView.js"></script>
     <script type="text/javascript" src="/dist/src/views/MapView.js"></script>
     <script type="text/javascript" src="/dist/src/views/FeedView.js"></script>
@@ -41,6 +42,7 @@
     <script type="text/javascript" src="/dist/src/views/SignupView.js"></script>
     <script type="text/javascript" src="/dist/src/components/NavBar.js"></script>
     <script type="text/javascript" src="/dist/src/components/ShareCard.js"></script>
+    <script type="text/javascript" src="/dist/src/components/LoginCard.js"></script>
     <script type="text/javascript" src="/dist/src/app.js"></script>
 
   </body>
