(feat) hides login card when logged in

--- a/tests/reactTests.html
+++ b/tests/reactTests.html
@@ -33,6 +33,7 @@
     <script src="../client/controllers/MapController.js"></script>
     <script src="../client/controllers/LocationController.js"></script>
     <script src="../client/controllers/AuthController.js"></script>
+    <script src="../client/dist/src/components/Toast.js"></script>
     <script src="../client/dist/src/views/SpotView.js"></script>
     <script src="../client/dist/src/views/MapView.js"></script>
     <script src="../client/dist/src/views/FeedView.js"></script>
@@ -43,6 +44,7 @@
     <script src="../client/dist/src/views/SignupView.js"></script>
     <script src="../client/dist/src/components/NavBar.js"></script>
     <script src="../client/dist/src/components/ShareCard.js"></script>
+    <script src="../client/dist/src/components/LoginCard.js"></script>
     <script src="../client/dist/src/app.js"></script>
 
     <div id="mocha"></div>
