Successful socket connection between client (app.js) and server (server.js).

--- a/tests/reactTests.html
+++ b/tests/reactTests.html
@@ -8,6 +8,7 @@
     <script src="../client/lib/react/react-dom.js"></script>
     <script src="../client/lib/react/react-with-addons.js"></script>
     <script src="./ReactRouter.js"></script>
+    <script src="./socket.io-1.4.5.js"></script>
     
     <script src="./History.js"></script>
 
