Adds logic for profile view

--- a/client/index.html
+++ b/client/index.html
@@ -9,9 +9,11 @@
     <link href="/big-icon.png" rel="icon" />
 
     <title>irl</title>
+
     <!-- Material icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="dist/styles/main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="lib/babel-browser/browser.js"></script>
@@ -31,6 +33,7 @@
     <script type="text/javascript" src="/controllers/TimeController.js"></script>
     <script type="text/javascript" src="/controllers/LocationController.js"></script>
     <script type="text/javascript" src="/controllers/AuthController.js"></script>
+    <script type="text/javascript" src="/controllers/ProfileController.js"></script>
     <script type="text/javascript" src="/dist/src/components/Toast.js"></script>
     <script type="text/javascript" src="/dist/src/views/SpotView.js"></script>
     <script type="text/javascript" src="/dist/src/views/MapView.js"></script>
