--- a/tests/reactTests.html
+++ b/tests/reactTests.html
@@ -36,6 +36,7 @@
     <script src="../client/controllers/AuthController.js"></script>
     <script src="../client/controllers/ProfileController.js"></script>
     <script src="../client/dist/src/components/Toast.js"></script>
+    <script src="../client/dist/src/components/ChatCard.js"></script>
     <script src="../client/dist/src/views/SpotView.js"></script>
     <script src="../client/dist/src/views/MapView.js"></script>
     <script src="../client/dist/src/views/FeedView.js"></script>
