Resolves merge conflict

--- a/tests/reactTests.html
+++ b/tests/reactTests.html
@@ -9,7 +9,7 @@
     <script src="../client/lib/react/react-with-addons.js"></script>
     <script src="./ReactRouter.js"></script>
     <script src="./socket.io-1.4.5.js"></script>
-    
+
     <script src="./History.js"></script>
 
     <script src="../client/lib/mocha/mocha.js"></script>
@@ -34,6 +34,7 @@
     <script src="../client/controllers/MapController.js"></script>
     <script src="../client/controllers/LocationController.js"></script>
     <script src="../client/controllers/AuthController.js"></script>
+    <script src="../client/controllers/ProfileController.js"></script>
     <script src="../client/dist/src/components/Toast.js"></script>
     <script src="../client/dist/src/views/SpotView.js"></script>
     <script src="../client/dist/src/views/MapView.js"></script>
@@ -51,6 +52,3 @@
     <div id="mocha"></div>
   </body>
 </html>
-
-
-    
