--- a/client/index.html
+++ b/client/index.html
@@ -34,6 +34,7 @@
     <script type="text/javascript" src="/controllers/LocationController.js"></script>
     <script type="text/javascript" src="/controllers/AuthController.js"></script>
     <script type="text/javascript" src="/controllers/ProfileController.js"></script>
+    <script type="text/javascript" src="/controllers/FeedController.js"></script>
     <script type="text/javascript" src="/dist/src/components/Toast.js"></script>
     <script type="text/javascript" src="/dist/src/components/ChatCard.js"></script>
     <script type="text/javascript" src="/dist/src/views/SpotView.js"></script>
