Makes appear as app when saved on iOS

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,10 @@
     <!-- Fixes scaling issues on iOS -->
     <meta name = "viewport" content = "user-scalable=no, width=device-width">
     <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="translucent">
     <link href="/big-icon.png" rel="icon" />
+    <link rel="apple-touch-icon" href="/ios-icon.png">
 
     <title>irl</title>
 
