(chore) adds img directory and updates img refs

--- a/client/index.html
+++ b/client/index.html
@@ -8,8 +8,8 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="translucent">
-    <link href="/big-icon.png" rel="icon" />
-    <link rel="apple-touch-icon" href="/ios-icon.png">
+    <link href="/img/icons/big-icon.png" rel="icon" />
+    <link rel="apple-touch-icon" href="/img/icons/ios-icon.png">
 
     <title>irl</title>
 
