(feat) creates new controller to follow user. Adds button to profile page to follow user

--- a/client/index.html
+++ b/client/index.html
@@ -41,6 +41,7 @@
     <script type="text/javascript" src="/controllers/ProfileController.js"></script>
     <script type="text/javascript" src="/controllers/FeedController.js"></script>
     <script type="text/javascript" src="/controllers/MetaController.js"></script>
+    <script type="text/javascript" src="/controllers/FollowController.js"></script>
     <script type="text/javascript" src="/dist/src/components/Toast.js"></script>
     <script type="text/javascript" src="/dist/src/components/ChatCard.js"></script>
     <script type="text/javascript" src="/dist/src/views/SpotView.js"></script>
