--- a/tests/reactTests.html
+++ b/tests/reactTests.html
@@ -37,6 +37,7 @@
     <script src="../client/controllers/ProfileController.js"></script>
     <script src="../client/controllers/TimeController.js"></script>
     <script src="../client/controllers/MetaController.js"></script>
+    <script src="../client/controllers/FollowController.js"></script>
     <script src="../client/dist/src/components/Toast.js"></script>
     <script src="../client/dist/src/components/ChatCard.js"></script>
     <script src="../client/dist/src/views/SpotView.js"></script>
