Adds controller for handling metadata

--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="translucent">
     <link href="/img/icons/big-icon.png" rel="icon" />
     <link rel="apple-touch-icon" href="/img/icons/ios-icon.png">
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="irl" />
 
     <title>irl</title>
 
@@ -38,6 +40,7 @@
     <script type="text/javascript" src="/controllers/AuthController.js"></script>
     <script type="text/javascript" src="/controllers/ProfileController.js"></script>
     <script type="text/javascript" src="/controllers/FeedController.js"></script>
+    <script type="text/javascript" src="/controllers/MetaController.js"></script>
     <script type="text/javascript" src="/dist/src/components/Toast.js"></script>
     <script type="text/javascript" src="/dist/src/components/ChatCard.js"></script>
     <script type="text/javascript" src="/dist/src/views/SpotView.js"></script>
