Arranging images on the splash page.

--- a/splash/index.html
+++ b/splash/index.html
@@ -100,55 +100,87 @@
       <div class="section" id="tech">
         <h1>Tech Stack</h1>
         <div class="tech">
-          <div class="tech-logo">[logo]</div>
+          <div class="tech-logo" style="background-image: url('logos/react.png');">
+            <!-- <img src="logos/react.png" alt="React"/> -->
+          </div>
           <div class="tech-name">React.js</div>
         </div>
         <div class="tech">
-          <div class="tech-logo">[logo]</div>
+          <div class="tech-logo">
+            <img src="logos/express.png" alt="Express.js"/>
+          </div>
           <div class="tech-name">Express.js</div>
         </div>
         <div class="tech">
-          <div class="tech-logo">[logo]</div>
+          <div class="tech-logo">
+            <img src="logos/node.png" alt="Node.js"/>
+          </div>
           <div class="tech-name">Node.js</div>
         </div>
         <div class="tech">
-          <div class="tech-logo">[logo]</div>
+          <div class="tech-logo">
+            <img src="logos/aws.png" alt="Amazon Web Services"/>
+          </div>
           <div class="tech-name">Amazon Web Services</div>
         </div>
         <div class="tech">
-          <div class="tech-logo">[logo]</div>
+          <div class="tech-logo">
+            <img src="logos/dynamodb.png" alt="DynamoDB"/>
+          </div>
           <div class="tech-name">Amazon DynamoDB</div>
         </div>
         <div class="tech">
-          <div class="tech-logo">[logo]</div>
-          <div class="tech-name">Socket.io</div>
+          <div class="tech-logo">
+            <img src="logos/docker.png" alt="Docker"/>
+          </div>
+          <div class="tech-name">Docker</div>
         </div>
         <div class="tech">
-          <div class="tech-logo">[logo]</div>
+          <div class="tech-logo">
+            <img src="logos/socket-io.png" alt="Socket.IO"/>
+          </div>
+          <div class="tech-name">Socket.IO</div>
+        </div>
+        <div class="tech">
+          <div class="tech-logo">
+            <img src="logos/googlemaps.png" alt="Google Maps API"/>
+          </div>
           <div class="tech-name">Google Maps API</div>
         </div>
         <div class="tech">
-          <div class="tech-logo">[logo]</div>
+          <div class="tech-logo">
+            <img src="logos/materialize.png" alt="Materialize"/>
+          </div>
           <div class="tech-name">Materialize</div>
         </div>
         <div class="tech">
-          <div class="tech-logo">[logo]</div>
+          <div class="tech-logo">
+            <img src="logos/sass.png" alt="SASS"/>
+          </div>
           <div class="tech-name">SASS</div>
         </div>
         <div class="tech">
-          <div class="tech-logo">[logo]</div>
+          <div class="tech-logo">
+            <img src="logos/travis.png" alt="Travis-CI"/>
+          </div>
           <div class="tech-name">Travis-CI</div>
         </div>
         <div class="tech">
-          <div class="tech-logo">[logo]</div>
+          <div class="tech-logo">
+            <img src="logos/mocha.png" alt="Mocha"/>
+          </div>
           <div class="tech-name">Mocha</div>
         </div>
         <div class="tech">
-          <div class="tech-logo">[logo]</div>
+          <div class="tech-logo">
+            <img src="logos/chai.png" alt="Chai"/>
+          </div>
           <div class="tech-name">Chai</div>
         </div>
         <div class="tech">
-          <div class="tech-logo">[logo]</div>
+          <div class="tech-logo">
+            <img src="logos/phantomjs.png" alt="PhantomJS"/>
+          </div>
           <div class="tech-name">PhantomJS</div>
         </div>
       </div>
