(feat) adds directions link on spot view

--- a/client/index.html
+++ b/client/index.html
@@ -44,6 +44,7 @@
     <script type="text/javascript" src="/controllers/FollowController.js"></script>
     <script type="text/javascript" src="/dist/src/components/Toast.js"></script>
     <script type="text/javascript" src="/dist/src/components/ChatCard.js"></script>
+    <script type="text/javascript" src="/dist/src/components/DirectionsLink.js"></script>
     <script type="text/javascript" src="/dist/src/views/SpotView.js"></script>
     <script type="text/javascript" src="/dist/src/views/MapView.js"></script>
     <script type="text/javascript" src="/dist/src/views/FeedView.js"></script>
