--- a/tests/reactTests.html
+++ b/tests/reactTests.html
@@ -39,6 +39,7 @@
     <script src="../client/controllers/MetaController.js"></script>
     <script src="../client/controllers/FollowController.js"></script>
     <script src="../client/dist/src/components/Toast.js"></script>
+    <script src="../client/dist/src/components/DirectionsLink.js"></script>
     <script src="../client/dist/src/components/ChatCard.js"></script>
     <script src="../client/dist/src/views/SpotView.js"></script>
     <script src="../client/dist/src/views/MapView.js"></script>
