--- a/client/index.html
+++ b/client/index.html
@@ -42,6 +42,7 @@
     <script type="text/javascript" src="/controllers/FeedController.js"></script>
     <script type="text/javascript" src="/controllers/MetaController.js"></script>
     <script type="text/javascript" src="/controllers/FollowController.js"></script>
+    <script type="text/javascript" src="/controllers/SaveSpotController.js"></script>
     <script type="text/javascript" src="/dist/src/components/Toast.js"></script>
     <script type="text/javascript" src="/dist/src/components/ChatCard.js"></script>
     <script type="text/javascript" src="/dist/src/components/DirectionsLink.js"></script>
