--- a/tests/reactTests.html
+++ b/tests/reactTests.html
@@ -38,6 +38,7 @@
     <script src="../client/controllers/TimeController.js"></script>
     <script src="../client/controllers/MetaController.js"></script>
     <script src="../client/controllers/FollowController.js"></script>
+    <script src="../client/controllers/SaveSpotController.js"></script>
     <script src="../client/dist/src/components/Toast.js"></script>
     <script src="../client/dist/src/components/DirectionsLink.js"></script>
     <script src="../client/dist/src/components/ChatCard.js"></script>
