Refactor splash page to use Materialize CSS.

--- a/splash/index.html
+++ b/splash/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 
     <!-- Fixes scaling issues on iOS -->
-    <meta name = "viewport" content = "user-scalable=no, width=device-width">
+    <meta name = "viewport" content = "user-scalable=no, width=device-width, initial-scale=1.0">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="translucent">
@@ -14,181 +14,341 @@
     <meta property="og:site_name" content="irl" />
 
     <title>irl</title>
-
-    <!-- Material icons -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="splash.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script src="lib/babel-browser/browser.js"></script>
-    <script src="lib/react/react.js"></script>
-    <script src="lib/react/react-dom.js"></script>
-    <script src="https://npmcdn.com/react-router/umd/ReactRouter.min.js"></script>
-    <script src="https://npmcdn.com/history/umd/History.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
-    <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/splash.css">
   </head>
 
+
+
   <body>
-    <div id="about-container">
+    <main>
+      <!-- banner -->
+      <div class="row banner">
+        <div class="container">
+          <div class="col s12">
 
-      <div id="banner">
-        <h1 id="app-name">irl</h1>
+            <h1 class="center">irl</h1>
 
-        <div>
-          <img src="logo.svg" alt="irl logo" id="logo"/>
-        </div>
+            <div class="center">
+              <img class="logo" src="logos/irl-logo.svg" alt="irl logo" />
+            </div>
 
-        <h2 id="tagline">irl is an ultra-local live feed of events happening near you, today.</h2>
+            <div class="center">
+              <h3 class="description">an ultra-local live feed of events happening near you <em>today</em></h3>
+            </div>
 
-        <h3 id="description">browse spots, create spots, share spots.</h3>
-      </div>
-
-
-      <div class="section" id="get-started">
-        <h1>Get Started</h1>
-        <a href="https://app.irl.events">Get Started.</a>
-      </div>
-
-      <div class="section" id="add-app">
-        <h1>Add irl as a mobile app</h1>
-        <h2>iOS</h2>
-        <ol>
-          <li>From <a href="http://app.irl.events">app.irl.events</a>, tap the <strong>Share</strong> button at the bottom of the screen.</li>
-          <li>Tap <strong>Add to Home Screen.</strong></li>
-          <li>Tap <strong>Add.</strong></li>
-        </ol>
-
-        <h2>Android</h2>
-        <ol>
-          <li>From <a href="app.irl.events">app.irl.events</a>, tap the <strong>Menu button.</strong></li>
-          <li>Tap <span class="strong">Add to homescreen.</span></li>
-          <li>Tap <strong>Add.</strong></li>
-        </ol>
-        </div>
-
-      <div class="section" id="team">
-        <h1>Team</h1>
-        <div class="team-member">
-          <div class="team-member-name">Josh Riesenbach</div>
-          <div class="team-member-role">Product Owner</div>
-          <div class="team-member-photo">[photo]</div>
-        </div>
-        <div class="team-member">
-          <div class="team-member-name">Michelle Thorsell</div>
-          <div class="team-member-role">Scrum Master</div>
-          <div class="team-member-photo">[photo]</div>
-        </div>
-        <div class="team-member">
-          <div class="team-member-name">Jisoo Yoon</div>
-          <div class="team-member-role">Full-Stack Developer</div>
-          <div class="team-member-photo">[photo]</div>
-        </div>
-        <div class="team-member">
-          <div class="team-member-name">Calvin Le</div>
-          <div class="team-member-role">Full-Stack Developer</div>
-          <div class="team-member-photo">[photo]</div>
-        </div>
-        <div class="team-member">
-          <div class="team-member-name">Neil Murphy</div>
-          <div class="team-member-role">Full-Stack Developer</div>
-          <div class="team-member-photo">[photo]</div>
+          </div>
         </div>
       </div>
 
-      <div class="section" id="tech">
-        <h1>Tech Stack</h1>
-        <div class="tech">
-          <div class="tech-logo" style="background-image: url('logos/react.png');">
-            <!-- <img src="logos/react.png" alt="React"/> -->
-          </div>
-          <div class="tech-name">React.js</div>
+      <!-- get started -->
+      <div class="parallax-container tint">
+        <div class="parallax">
+          <img src="photos/city3.jpg" />
         </div>
-        <div class="tech">
-          <div class="tech-logo">
-            <img src="logos/express.png" alt="Express.js"/>
-          </div>
-          <div class="tech-name">Express.js</div>
+        <div class="center">
+          <h3 class="tagline">browse spots, create spots, share spots</h3>
         </div>
-        <div class="tech">
-          <div class="tech-logo">
-            <img src="logos/node.png" alt="Node.js"/>
-          </div>
-          <div class="tech-name">Node.js</div>
-        </div>
-        <div class="tech">
-          <div class="tech-logo">
-            <img src="logos/aws.png" alt="Amazon Web Services"/>
-          </div>
-          <div class="tech-name">Amazon Web Services</div>
-        </div>
-        <div class="tech">
-          <div class="tech-logo">
-            <img src="logos/dynamodb.png" alt="DynamoDB"/>
-          </div>
-          <div class="tech-name">Amazon DynamoDB</div>
-        </div>
-        <div class="tech">
-          <div class="tech-logo">
-            <img src="logos/docker.png" alt="Docker"/>
-          </div>
-          <div class="tech-name">Docker</div>
-        </div>
-        <div class="tech">
-          <div class="tech-logo">
-            <img src="logos/socket-io.png" alt="Socket.IO"/>
-          </div>
-          <div class="tech-name">Socket.IO</div>
-        </div>
-        <div class="tech">
-          <div class="tech-logo">
-            <img src="logos/googlemaps.png" alt="Google Maps API"/>
-          </div>
-          <div class="tech-name">Google Maps API</div>
-        </div>
-        <div class="tech">
-          <div class="tech-logo">
-            <img src="logos/materialize.png" alt="Materialize"/>
-          </div>
-          <div class="tech-name">Materialize</div>
-        </div>
-        <div class="tech">
-          <div class="tech-logo">
-            <img src="logos/sass.png" alt="SASS"/>
-          </div>
-          <div class="tech-name">SASS</div>
-        </div>
-        <div class="tech">
-          <div class="tech-logo">
-            <img src="logos/travis.png" alt="Travis-CI"/>
-          </div>
-          <div class="tech-name">Travis-CI</div>
-        </div>
-        <div class="tech">
-          <div class="tech-logo">
-            <img src="logos/mocha.png" alt="Mocha"/>
-          </div>
-          <div class="tech-name">Mocha</div>
-        </div>
-        <div class="tech">
-          <div class="tech-logo">
-            <img src="logos/chai.png" alt="Chai"/>
-          </div>
-          <div class="tech-name">Chai</div>
-        </div>
-        <div class="tech">
-          <div class="tech-logo">
-            <img src="logos/phantomjs.png" alt="PhantomJS"/>
-          </div>
-          <div class="tech-name">PhantomJS</div>
+        <div class="center">
+          <a class="waves-effect waves-light btn-large" href="http://app.irl.events">launch app</a>
         </div>
       </div>
 
-      <div class="section" id="privacy">
-        <h1>Privacy</h1>
+      <!-- install for mobile container -->
+      <div class="row">
+        <div class="container add-app">
+          <h3>Add irl as a mobile app</h3>
+          <div class="col s12 l6">
+            <h4>iOS</h4>
+            <div class="slider-container">
+                <div class="slider">
+                  <ul class="slides">
+                    <li>
+                      <img src="photos/ios1.png">
+                    </li>
+                    <li>
+                      <img src="photos/ios2.png">
+                    </li>
+                    <li>
+                      <img src="photos/ios3.png">
+                    </li>
+                    <li>
+                      <img src="photos/ios4.png">
+                    </li>
+                  </ul>
+                </div>
+            </div>
+            <ol class="directions">
+              <li>From <a href="http://app.irl.events">app.irl.events</a>, tap the <strong>Share</strong> button at the bottom of the screen.</li>
+              <li>Tap <strong>Add to Home Screen.</strong></li>
+              <li>Tap <strong>Add.</strong></li>
+              <li>Open irl from your device's homescreen.</li>
+            </ol>
+          </div>
+          <div class="col s12 l6">
+            <h4>Android</h4>
+            <div class="slider-container">
+              <div class="slider">
+                <ul class="slides">
+                  <li>
+                    <img src="photos/ios1.png">
+                  </li>
+                  <li>
+                    <img src="photos/ios2.png">
+                  </li>
+                  <li>
+                    <img src="photos/ios3.png">
+                  </li>
+                  <li>
+                    <img src="photos/ios4.png">
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <ol class="directions">
+              <li>From <a href="app.irl.events">app.irl.events</a>, tap the <strong>Menu button.</strong></li>
+              <li>Tap <strong>Add to homescreen.</strong></li>
+              <li>Tap <strong>Add.</strong></li>
+              <li>Open irl from your device's homescreen.</li>
+            </ol>
+          </div>
+        </div>
       </div>
 
+      <!-- team container -->
+      <div class="parallax-container tint">
+        <div class="parallax">
+          <img src="photos/city2.jpg" />
+        </div>
+        <div class="center">
+          <h3 class="tagline">meet the team</h3>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="container team">
+          <div class="team-member col s12 m6 l4">
+            <div class="team-member-photo">
+              <img src="photos/josh.jpg" />
+            </div>
+            <div class="team-member-name">Josh Riesenbach</div>
+            <div class="team-member-role">Product Owner, Full-Stack Developer</div>
+          </div>
+          <div class="team-member col s12 m6 l4">
+            <div class="team-member-photo">
+              <img src="photos/michelle.png" />
+            </div>
+            <div class="team-member-name">Michelle Thorsell</div>
+            <div class="team-member-role">Scrum Master, Full-Stack Developer</div>
+          </div>
+          <div class="team-member col s12 m6 l4">
+            <div class="team-member-photo">
+              <img src="photos/jisoo.jpg" />
+            </div>
+            <div class="team-member-name">Jisoo Yoon</div>
+            <div class="team-member-role">Full-Stack Developer</div>
+          </div>
+          <div class="team-member col s12 m6 l4">
+            <div class="team-member-photo">
+              <img src="photos/calvin.png" />
+            </div>
+            <div class="team-member-name">Calvin Le</div>
+            <div class="team-member-role">Full-Stack Developer</div>
+          </div>
+          <div class="team-member col s12 m6 l4">
+            <div class="team-member-photo">
+              <img src="photos/neil.jpg" />
+            </div>
+            <div class="team-member-name">Neil Murphy</div>
+            <div class="team-member-role">Full-Stack Developer</div>
+          </div>
+        </div>
+      </div>
+
+      <!-- tech container -->
+      <div class="parallax-container tint">
+        <div class="parallax">
+          <img src="photos/city1.jpg" />
+        </div>
+        <div class="center">
+          <h3 class="tagline">tech stack</h3>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="container tech">
+          <div class="tech col s12 m6 l4">
+            <div class="tech-logo">
+              <img src="logos/react.png" alt="React"/>
+            </div>
+            <div class="tech-name">
+              React.js
+            </div>
+          </div>
+
+          <div class="tech col s12 m6 l4">
+            <div class="tech-logo">
+              <img src="logos/express.png" alt="Express.js"/>
+            </div>
+            <div class="tech-name">
+              Express.js
+            </div>
+          </div>
+
+          <div class="tech col s12 m6 l4">
+            <div class="tech-logo">
+              <img src="logos/node.png" alt="Node.js"/>
+            </div>
+            <div class="tech-name">
+              Node.js
+            </div>
+          </div>
+
+          <div class="tech col s12 m6 l4">
+            <div class="tech-logo">
+              <img src="logos/aws.png" alt="Amazon Web Services"/>
+            </div>
+            <div class="tech-name">
+              Amazon Web Services
+            </div>
+          </div>
+
+          <div class="tech col s12 m6 l4">
+            <div class="tech-logo">
+              <img src="logos/dynamodb.png" alt="DynamoDB"/>
+            </div>
+            <div class="tech-name">
+              Amazon DynamoDB
+            </div>
+          </div>
+
+          <div class="tech col s12 m6 l4">
+            <div class="tech-logo">
+              <img src="logos/docker.png" alt="Docker"/>
+            </div>
+            <div class="tech-name">
+              Docker
+            </div>
+          </div>
+
+          <div class="tech col s12 m6 l4">
+            <div class="tech-logo">
+              <img src="logos/socket-io.png" alt="Socket.IO"/>
+            </div>
+            <div class="tech-name">
+              Socket.IO
+            </div>
+          </div>
+
+          <div class="tech col s12 m6 l4">
+            <div class="tech-logo">
+              <img src="logos/googlemaps.png" alt="Google Maps API"/>
+            </div>
+            <div class="tech-name">
+              Google Maps API
+            </div>
+          </div>
+
+          <div class="tech col s12 m6 l4">
+            <div class="tech-logo">
+              <img src="logos/materialize.png" alt="Materialize"/>
+            </div>
+            <div class="tech-name">
+              Materialize
+            </div>
+          </div>
+
+          <div class="tech col s12 m6 l4">
+            <div class="tech-logo">
+              <img src="logos/sass.png" alt="SASS"/>
+            </div>
+            <div class="tech-name">
+              SASS
+            </div>
+          </div>
+
+          <div class="tech col s12 m6 l4">
+            <div class="tech-logo">
+              <img src="logos/travis.png" alt="Travis-CI"/>
+            </div>
+            <div class="tech-name">
+              Travis-CI
+            </div>
+          </div>
+
+          <div class="tech col s12 m6 l4">
+            <div class="tech-logo">
+              <img src="logos/mocha.png" alt="Mocha"/>
+            </div>
+            <div class="tech-name">
+              Mocha
+            </div>
+          </div>
+
+          <div class="tech col s12 m6 l4">
+            <div class="tech-logo">
+              <img src="logos/chai.png" alt="Chai"/>
+            </div>
+            <div class="tech-name">
+              Chai
+            </div>
+          </div>
+
+          <div class="tech col s12 m6 l4">
+            <div class="tech-logo">
+              <img src="logos/phantomjs.png" alt="PhantomJS"/>
+            </div>
+            <div class="tech-name">
+              PhantomJS
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+
+
+
+
+      <!-- footer -->
+      <footer class="page-footer">
+        <div class="footer-copyright">
+          <div class="container">
+            <div class="row">
+              <div class="col s6">© 2016 irl</div>
+              <div class="col s6">
+                <a class="grey-text text-lighten-4 right" href="#privacy">Privacy</a>
+              </div>
+            </div>
+           </div>
+        </div>
+      </footer>
+
+    <!-- Privacy Modal -->
+    <div id="privacy-modal" class="modal modal-fixed-footer">
+      <div class="modal-content">
+        <h4>Privacy Notice</h4>
+        <p>A bunch of text</p>
+      </div>
+        <div class="modal-footer">
+          <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Agree</a>
+        </div>
     </div>
+
+    </main>
+    <script>
+      $(document).ready(function(){
+        $('.parallax').parallax();
+        $('.slider').slider({height: 667});
+        // the "href" attribute of .modal-trigger must specify the modal ID
+        $('.modal-trigger').leanModal();
+      });
+    </script>
   </body>
 </html>
