--- a/splash/index.html
+++ b/splash/index.html
@@ -44,6 +44,18 @@
         </div>
       </div>
 
+      <div class='row'>
+        <div class="container">
+          <div class="col s12 hide-on-small-only">
+            <img class="responsive-img" src='photos/screenshot-combo.jpg' />
+          </div>
+          <div class="col s12 hide-on-med-and-up">
+            <img class="responsive-img" src='photos/screenshot-phone.png' />
+          </div>
+        </div>
+      </div>
+
+
       <!-- get started -->
       <div class="parallax-container tint">
         <div class="parallax">
